--- a/apps/shamrock-site/src/app/app.component.html
+++ b/apps/shamrock-site/src/app/app.component.html
@@ -1,1 +1,3 @@
-<app-nx-welcome></app-nx-welcome> <router-outlet></router-outlet>
+<lib-header></lib-header>
+<router-outlet></router-outlet>
+<lib-footer></lib-footer>
