chore: added tailwind

--- a/libs/ui/src/lib/header/header.component.html
+++ b/libs/ui/src/lib/header/header.component.html
@@ -1,1 +1,11 @@
-<p>header works!</p>
+<div class="header">
+  <img src="assets/shamrock-logo.png" alt="shamrock" />
+  <h1>THE SHAMROCK</h1>
+
+  <div class="navbar">
+    <h2>READ</h2>
+    <h2>WATCH</h2>
+    <h2>PLAY</h2>
+    <h2>FOLLOW</h2>
+  </div>
+</div>
