wip: getting logo to display

--- a/libs/ui/src/lib/header/header.component.html
+++ b/libs/ui/src/lib/header/header.component.html
@@ -1,6 +1,8 @@
 <div class="header">
-  <img src="assets/shamrock-logo.png" alt="shamrock" />
-  <h1>THE SHAMROCK</h1>
+  <div class="logo">
+    <img src="./assets/shamrockLogo.png" alt="shamrock logo" />
+    <h1>THE SHAMROCK</h1>
+  </div>
 
   <div class="navbar">
     <h2>READ</h2>
