--- a/libs/ui/src/lib/header/header.component.html
+++ b/libs/ui/src/lib/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="header">
   <div class="logo">
-    <img src="./assets/shamrockLogo.png" alt="shamrock logo" />
+    <img src="./assets/shamrockLogoTest.png" alt="shamrock logo" />
     <h1>THE SHAMROCK</h1>
   </div>
 
