chore: cleaned up libs file structure

--- a/libs/pages/src/lib/home/home.component.html
+++ b/libs/pages/src/lib/home/home.component.html
@@ -1,1 +1,32 @@
-<p>home works!</p>
+<ngb-carousel>
+  <ng-template ngbSlide>
+    <img
+      src="https://picsum.photos/1200/500?random&t=1"
+      alt="Random first slide"
+    />
+    <div class="carousel-caption">
+      <h3>First slide label</h3>
+      <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+    </div>
+  </ng-template>
+  <ng-template ngbSlide>
+    <img
+      src="https://picsum.photos/1200/500?random&t=1"
+      alt="Random first slide"
+    />
+    <div class="carousel-caption">
+      <h3>First slide label</h3>
+      <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+    </div>
+  </ng-template>
+  <ng-template ngbSlide>
+    <img
+      src="https://picsum.photos/1200/500?random&t=1"
+      alt="Random first slide"
+    />
+    <div class="carousel-caption">
+      <h3>First slide label</h3>
+      <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+    </div>
+  </ng-template>
+</ngb-carousel>
