--- a/apps/shamrock-site/src/app/app.component.html
+++ b/apps/shamrock-site/src/app/app.component.html
@@ -1,3 +1,3 @@
 <lib-header></lib-header>
-<router-outlet></router-outlet>
+<router-outlet class="content"></router-outlet>
 <lib-footer></lib-footer>
