wip: making carousel a resuable component

--- a/libs/pages/src/lib/home/home.component.html
+++ b/libs/pages/src/lib/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="home col-lg-8">
-  <lib-image-carousel></lib-image-carousel>
+  <lib-image-carousel [data]="this.carouselData"></lib-image-carousel>
   <div class="about row">
     <div class="about-text col">
       <h2>About the Shamrock</h2>
