--- a/libs/ui/src/lib/shared/image-carousel/image-carousel.component.html
+++ b/libs/ui/src/lib/shared/image-carousel/image-carousel.component.html
@@ -1,7 +1,7 @@
 <ngb-carousel>
   @for (image of data; track $index) {
   <ng-template ngbSlide>
-    <img (src)="(data[$index].image)" (alt)="(data[$index].altText)" />
+    <img [src]="data[$index].image" [alt]="data[$index].altText" />
     <div class="carousel-caption">
       <h3>{{ data[$index].heading }}</h3>
       <p>{{ data[$index].description }}</p>
