feat: added about shamrock section

--- a/libs/pages/src/lib/home/home.component.html
+++ b/libs/pages/src/lib/home/home.component.html
@@ -1,20 +1,6 @@
 <div class="home col-lg-8">
   <lib-image-carousel [data]="this.carouselData"></lib-image-carousel>
-  <div class="about row">
-    <div class="about-text col">
-      <h2>About the Shamrock</h2>
-      <p>
-        We are a lorem ipsum sit dolor amet dsjt jeif fmfje w e t ttt t dfsd
-        fmke dfjkjoe sdjfk
-      </p>
-    </div>
-    <div class="about-img col">
-      <img
-        src="https://picsum.photos/1200/500?random&t=1"
-        alt="About the Shamrock"
-      />
-    </div>
-  </div>
+  <lib-about-section></lib-about-section>
   <div class="meet">
     <div class="meet-person">
       <div class="meet-img">
