--- a/libs/ui/src/lib/home/about-section/about-section.component.html
+++ b/libs/ui/src/lib/home/about-section/about-section.component.html
@@ -1,1 +1,15 @@
-<p>about-section works!</p>
+<div class="about row">
+  <div class="about-text col">
+    <h2>About the Shamrock</h2>
+    <p>
+      We are a lorem ipsum sit dolor amet dsjt jeif fmfje w e t ttt t dfsd fmke
+      dfjkjoe sdjfk
+    </p>
+  </div>
+  <div class="about-img col">
+    <img
+      src="https://picsum.photos/1200/500?random&t=1"
+      alt="About the Shamrock"
+    />
+  </div>
+</div>
