--- a/libs/pages/src/lib/home/home.component.html
+++ b/libs/pages/src/lib/home/home.component.html
@@ -1,18 +1,5 @@
 <div class="home col-lg-8">
   <lib-image-carousel [data]="this.carouselData"></lib-image-carousel>
   <lib-about-section></lib-about-section>
-  <div class="meet">
-    <div class="meet-person">
-      <div class="meet-img">
-        <img
-          src="https://picsum.photos/1200/500?random&t=1"
-          alt="About the Shamrock"
-        />
-      </div>
-      <div class="meet-text">
-        <p>Name</p>
-        <p>Role</p>
-      </div>
-    </div>
-  </div>
+  <lib-meet-team></lib-meet-team>
 </div>
