--- a/libs/ui/src/lib/home/meet-team/meet-team.component.html
+++ b/libs/ui/src/lib/home/meet-team/meet-team.component.html
@@ -1,1 +1,14 @@
-<p>meet-team works!</p>
+<div class="meet">
+  <div class="meet-person">
+    <div class="meet-img">
+      <img
+        src="https://picsum.photos/1200/500?random&t=1"
+        alt="About the Shamrock"
+      />
+    </div>
+    <div class="meet-text">
+      <p>Name</p>
+      <p>Role</p>
+    </div>
+  </div>
+</div>
