feat: set up the meet-team structure

--- a/libs/ui/src/lib/home/meet-team-person/meet-team-person.component.html
+++ b/libs/ui/src/lib/home/meet-team-person/meet-team-person.component.html
@@ -1,1 +1,12 @@
-<p>meet-team-person works!</p>
+<div class="meet-person">
+  <div class="meet-img">
+    <img
+      src="https://picsum.photos/1200/500?random&t=1"
+      alt="About the Shamrock"
+    />
+  </div>
+  <div class="meet-text">
+    <p>Name</p>
+    <p>Role</p>
+  </div>
+</div>
