Feat: Created home page (#6)
* chore: cleaned up libs file structure

* chore: added image carousel component

* feat: added image carousel on home page

* fix: corrected CSS problems with home component

* fix: mobile responsiveness

* feat: added about section to home page

* wip: making carousel a resuable component

* chore: made image-carousel run off input data

* chore: created about component

* feat: added about shamrock section

* chore: added meet team component

* feat: added meet team component

* chore: created meet team person component

* feat: set up the meet-team structure

* fix: lint fixes

* fix: lint fix

* fix: lint fix

--- a/libs/pages/src/lib/home/home.component.html
+++ b/libs/pages/src/lib/home/home.component.html
@@ -1,1 +1,5 @@
-<p>home works!</p>
+<div class="home col-lg-8">
+  <lib-image-carousel [data]="this.carouselData"></lib-image-carousel>
+  <lib-about-section></lib-about-section>
+  <lib-meet-team></lib-meet-team>
+</div>
