feat: added routing to home and follow pages

--- a/libs/ui/src/lib/navigation/header/header.component.html
+++ b/libs/ui/src/lib/navigation/header/header.component.html
@@ -1,13 +1,15 @@
 <div class="header">
   <div class="logo">
-    <img src="./assets/shamrockLogo.png" alt="shamrock logo" />
-    <h1>THE SHAMROCK</h1>
+    <a href="" class="nostyle">
+      <img src="./assets/shamrockLogo.png" alt="shamrock logo" />
+      <h1>THE SHAMROCK</h1>
+    </a>
   </div>
 
   <div class="navbar">
     <h2>READ</h2>
     <h2>WATCH</h2>
     <h2>PLAY</h2>
-    <h2>FOLLOW</h2>
+    <a href="follow" class="nostyle"><h2>FOLLOW</h2></a>
   </div>
 </div>
