--- a/libs/ui/src/lib/navigation/header/header.component.scss
+++ b/libs/ui/src/lib/navigation/header/header.component.scss
@@ -18,4 +18,16 @@
   .navbar {
     @apply col-span-3 flex flex-row justify-around items-center;
   }
+
+  a.nostyle:link {
+    text-decoration: inherit;
+    color: inherit;
+    cursor: auto;
+  }
+
+  a.nostyle:visited {
+    text-decoration: inherit;
+    color: inherit;
+    cursor: auto;
+  }
 }
