feat: added watch page to routing

--- a/libs/ui/src/lib/navigation/header/header.component.html
+++ b/libs/ui/src/lib/navigation/header/header.component.html
@@ -8,7 +8,7 @@
 
   <div class="navbar">
     <h2>READ</h2>
-    <h2>WATCH</h2>
+    <a href="watch" class="nostyle"><h2>WATCH</h2></a>
     <h2>PLAY</h2>
     <a href="follow" class="nostyle"><h2>FOLLOW</h2></a>
   </div>
