fix: corrected asset image use for home page

--- a/libs/ui/src/lib/home/about-section/about-section.component.html
+++ b/libs/ui/src/lib/home/about-section/about-section.component.html
@@ -11,10 +11,8 @@
       with your fellow students!
     </p>
   </div>
+  1
   <div class="about-img col">
-    <img
-      src="https://picsum.photos/1200/500?random&t=1"
-      alt="About the Shamrock"
-    />
+    <img src="./assets/home/may2024GroupPhoto.png" alt="About the Shamrock" />
   </div>
 </div>
