--- a/libs/ui/src/lib/navigation/header/header.component.html
+++ b/libs/ui/src/lib/navigation/header/header.component.html
@@ -1,7 +1,7 @@
 <div class="header">
   <div class="logo">
     <a href="" class="nostyle">
-      <img src="./assets/shamrockLogo.png" alt="shamrock logo" />
+      <img src="./assets/shared/shamrockLogo.png" alt="shamrock logo" />
       <h1>THE SHAMROCK</h1>
     </a>
   </div>
