implemented some follow-icon components

--- a/libs/ui/src/lib/follow/follow-icon/follow-icon.component.html
+++ b/libs/ui/src/lib/follow/follow-icon/follow-icon.component.html
@@ -1,1 +1,4 @@
-<p>follow-icon works!</p>
+<a [href]="data.linkUrl">
+    <img [src]="data.imageUrl" [alt]="data.altText">
+    <h3>{{data.name}}</h3>
+</a>
