chore: created read component

--- a/libs/ui/src/lib/navigation/header/header.component.html
+++ b/libs/ui/src/lib/navigation/header/header.component.html
@@ -7,7 +7,7 @@
   </div>
 
   <div class="navbar">
-    <h2>READ</h2>
+    <a href="read" class="nostyle"><h2>READ</h2></a>
     <h2>WATCH</h2>
     <h2>PLAY</h2>
     <a href="follow" class="nostyle"><h2>FOLLOW</h2></a>
