Feat/home page design (#16)
* wip: adding content to home page

* fix: corrected asset image use for home page

* feat: added changing text color to image carousel

* feat: visual fixes on home page

* feat: header/footer style changes

---------

Co-authored-by: Jasper Holland <83934607+UnicornSyrup@users.noreply.github.com>

--- a/libs/ui/src/lib/home/about-section/about-section.component.html
+++ b/libs/ui/src/lib/home/about-section/about-section.component.html
@@ -2,14 +2,16 @@
   <div class="about-text col">
     <h2>About the Shamrock</h2>
     <p>
-      We are a lorem ipsum sit dolor amet dsjt jeif fmfje w e t ttt t dfsd fmke
-      dfjkjoe sdjfk
+      We are The Shamrock - the student run magazine for the Mizzou College of
+      Engineering! The Shamrock first formed in 1906, only three years after the
+      first E-Week. In our current form, we are a digital magazine hosted right
+      here on this website. We seek to inform, entertain, and bring together
+      engineers all over Mizzou. So sign up for our email list and follow us on
+      social media to say in the loop with what's going on in the College and
+      with your fellow students!
     </p>
   </div>
   <div class="about-img col">
-    <img
-      src="https://picsum.photos/1200/500?random&t=1"
-      alt="About the Shamrock"
-    />
+    <img src="./assets/home/may2024GroupPhoto.png" alt="About the Shamrock" />
   </div>
 </div>
