--- a/libs/pages/src/lib/read/read.component.html
+++ b/libs/pages/src/lib/read/read.component.html
@@ -1,2 +1,4 @@
-<lib-issues-sidebar></lib-issues-sidebar>
-<lib-issue-reader></lib-issue-reader>
+<div class="read">
+  <lib-issues-sidebar class="col-lg-3"></lib-issues-sidebar>
+  <lib-issue-reader class="col-lg-7"></lib-issue-reader>
+</div>
