--- a/libs/ui/src/lib/read/issue-reader/issue-reader.component.html
+++ b/libs/ui/src/lib/read/issue-reader/issue-reader.component.html
@@ -1,6 +1,4 @@
 <object class="pdf"
 data=
-"./assets/read/Oct2024.pdf"
-width="800"
-height="500">
+"./assets/read/Oct2024.pdf" width="100%" height="100%">
 </object>
