feat: added issue covers and titles

--- a/libs/ui/src/lib/read/issue-reader/issue-reader.component.html
+++ b/libs/ui/src/lib/read/issue-reader/issue-reader.component.html
@@ -1,4 +1,6 @@
-<object class="pdf"
-data=
-"./assets/read/Oct2024.pdf" width="100%" height="100%">
-</object>
+<div>
+    <object class="pdf"
+    data=
+    "./assets/issues/oct2024.pdf" width="100%">
+    </object>
+</div>
