feat: added store to track selected issue

--- a/libs/ui/src/lib/read/issue-reader/issue-reader.component.html
+++ b/libs/ui/src/lib/read/issue-reader/issue-reader.component.html
@@ -1,6 +1,6 @@
 <div>
     <object class="pdf"
-    data=
-    "./assets/issues/oct2024.pdf" width="100%">
+    (data)=
+    "this.issueFile" width="100%">
     </object>
 </div>
