feat: filled out follow us component

--- a/libs/ui/src/lib/follow/follow-icon/follow-icon.component.html
+++ b/libs/ui/src/lib/follow/follow-icon/follow-icon.component.html
@@ -1,4 +1,4 @@
 <a [href]="data.linkUrl">
     <img [src]="data.imageUrl" [alt]="data.altText">
-    <h3>{{data.name}}</h3>
+    <h3 class="text-center">{{data.name}}</h3>
 </a>
