--- a/libs/ui/src/lib/follow/join-us/join-us.component.html
+++ b/libs/ui/src/lib/follow/join-us/join-us.component.html
@@ -1,1 +1,5 @@
-<p>join-us works!</p>
+<div class="join-us grid grid-cols-3 gap-16 col-lg-8 mx-auto">
+  @for(icon of this.iconData; track $index) {
+      <lib-follow-icon [data]="icon"></lib-follow-icon>
+  }
+  </div>
