feat: added routing to play page

--- a/libs/ui/src/lib/navigation/header/header.component.html
+++ b/libs/ui/src/lib/navigation/header/header.component.html
@@ -9,7 +9,7 @@
   <div class="navbar">
     <a href="read" class="nostyle"><h2>READ</h2></a>
     <h2>WATCH</h2>
-    <h2>PLAY</h2>
+    <a href="play" class="nostyle"><h2>PLAY</h2></a>
     <a href="follow" class="nostyle"><h2>FOLLOW</h2></a>
   </div>
 </div>
