feat: added play components into feature page

--- a/libs/pages/src/lib/play/play.component.html
+++ b/libs/pages/src/lib/play/play.component.html
@@ -1,1 +1,6 @@
-<p>play works!</p>
+<div class="play container">
+  <div class="row">
+    <lib-puzzle-sidebar class="col-lg-3"></lib-puzzle-sidebar>
+    <lib-puzzle-display class="col-lg-9"></lib-puzzle-display>
+  </div>
+</div>
