--- a/libs/ui/src/lib/play/puzzle-sidebar/puzzle-sidebar.component.html
+++ b/libs/ui/src/lib/play/puzzle-sidebar/puzzle-sidebar.component.html
@@ -7,7 +7,7 @@
       <div ngbAccordionCollapse>
         <div ngbAccordionBody>
           @for (puzzle of issue.puzzles; track $index) {
-            <p>{{puzzle}}</p>
+            <button (click)="this.selectPuzzle(puzzle)">{{puzzle}}</button>
           }
         </div>
       </div>
