feat: working puzzle sidebar

--- a/libs/ui/src/lib/play/puzzle-sidebar/puzzle-sidebar.component.html
+++ b/libs/ui/src/lib/play/puzzle-sidebar/puzzle-sidebar.component.html
@@ -7,7 +7,9 @@
       <div ngbAccordionCollapse>
         <div ngbAccordionBody>
           @for (puzzle of issue.puzzles; track $index) {
-            <button (click)="this.selectPuzzle(puzzle)">{{puzzle.title}}</button>
+            @if (puzzle) {
+              <button (click)="this.selectPuzzle(puzzle)">{{puzzle.title}}</button>
+            }
           }
         </div>
       </div>
