feat: added puzzles

--- a/libs/ui/src/lib/play/puzzle-display/puzzle-display.component.html
+++ b/libs/ui/src/lib/play/puzzle-display/puzzle-display.component.html
@@ -1,9 +1,36 @@
-@switch (this.selectedPuzzle) {
+@switch (this.store.selectedPuzzle()) {
   @case ("crossword-dec-2024") {
     <iframe style="height: 90vh; width: 100%;" src="https://crosshare.org/embed/73k1NPpQTUFkfb2Nxn9f/gUtiLevCJVO0dZqDb7AcvvqSKrw2" frameborder="0" allowfullscreen="true" allowtransparency="true" allow="clipboard-write *"></iframe>
   }
   @case ("crossword-oct-2024") {
     <iframe style="height: 90vh; width: 100%;" src="https://crosshare.org/embed/2cP7nHAHGk4eD3vdlXgE/gUtiLevCJVO0dZqDb7AcvvqSKrw2" frameborder="0" allowfullscreen="true" allowtransparency="true" allow="clipboard-write *"></iframe>
+  }
+  @case ("crossword-may-2024") {
+    <iframe style="height: 90vh; width: 100%;" src="https://crosshare.org/embed/Czg62zIINfF97vLm33F5/gUtiLevCJVO0dZqDb7AcvvqSKrw2" frameborder="0" allowfullscreen="true" allowtransparency="true" allow="clipboard-write *"></iframe>
+  }
+  @case ("crossword-mar-2024") {
+    <iframe style="height: 90vh; width: 100%;" src="https://crosshare.org/embed/2Exk2pdtEBsC34NZYpAX/gUtiLevCJVO0dZqDb7AcvvqSKrw2" frameborder="0" allowfullscreen="true" allowtransparency="true" allow="clipboard-write *"></iframe>
+  }
+  @case ("crossword-dec-2023") {
+    <iframe style="height: 90vh; width: 100%;" src="https://crosshare.org/embed/fH0iYi8k3nQLeIQBnURg/gUtiLevCJVO0dZqDb7AcvvqSKrw2" frameborder="0" allowfullscreen="true" allowtransparency="true" allow="clipboard-write *"></iframe>
+  }
+  @case ("crossword-oct-2023") {
+    <iframe style="height: 90vh; width: 100%;" src="https://crosshare.org/embed/d7O9matWndirEFJej9h1/gUtiLevCJVO0dZqDb7AcvvqSKrw2" frameborder="0" allowfullscreen="true" allowtransparency="true" allow="clipboard-write *"></iframe>
+  }
+  @case ("puzzgrid-oct-2024") {
+    <iframe style="height: 70vh; width: 100%;" src="https://puzzgrid.com/grid/106076"></iframe>
+  }
+  @case ("puzzgrid-may-2024") {
+    <iframe style="height: 70vh; width: 100%;" src="https://puzzgrid.com/grid/106076"></iframe>
+  }
+  @case ("puzzgrid-mar-2024") {
+    <iframe style="height: 70vh; width: 100%;" src="https://puzzgrid.com/grid/106076"></iframe>
+  }
+  @case ("puzzgrid-dec-2023") {
+    <iframe style="height: 70vh; width: 100%;" src="https://puzzgrid.com/grid/106076"></iframe>
+  }
+  @case ("puzzgrid-oct-2023") {
+    <iframe style="height: 70vh; width: 100%;" src="https://puzzgrid.com/grid/106076"></iframe>
   }
   @default {
     Default case.
