--- a/libs/ui/src/lib/play/puzzle-sidebar/puzzle-sidebar.component.html
+++ b/libs/ui/src/lib/play/puzzle-sidebar/puzzle-sidebar.component.html
@@ -5,7 +5,7 @@
         <button ngbAccordionButton>{{issue.title}}</button>
       </h2>
       <div ngbAccordionCollapse>
-        <div ngbAccordionBody>
+        <div ngbAccordionBody class="flex flex-col">
           @for (puzzle of issue.puzzles; track $index) {
             @if (puzzle) {
               <button (click)="this.selectPuzzle(puzzle)">{{puzzle.title}}</button>
