feat: added video cards

--- a/libs/ui/src/lib/watch/video-card/video-card.component.html
+++ b/libs/ui/src/lib/watch/video-card/video-card.component.html
@@ -1,1 +1,4 @@
-<p>video-card works!</p>
+<div class="flex flex-col">
+    <img src="./assets/watch/thumbnails/greenBurger.png">
+    <span class="text-center">Green Burger</span>
+</div>
