wip: video info component

--- a/libs/pages/src/lib/watch/watch.component.html
+++ b/libs/pages/src/lib/watch/watch.component.html
@@ -1,3 +1,5 @@
-<lib-video-player></lib-video-player>
-<lib-video-info></lib-video-info>
+<div class="grid grid-cols-6">
+    <lib-video-player class="col-span-4"></lib-video-player>
+    <lib-video-info class="col-span-2"></lib-video-info>
+</div>
 <lib-video-cards></lib-video-cards>
